--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li class="deal">
-                    <a href="<?php echo Mage::getUrl('').'super-sale'; ?>">SALE %</a>
+                    <a href="<?php echo Mage::getUrl('').'gastro-sale'; ?>">SALE %</a>
                 </li>
             </ul>
         </div>
