--- a/app/design/frontend/foundation/default/layout/local.xml
+++ b/app/design/frontend/foundation/default/layout/local.xml
@@ -303,7 +303,7 @@
     <catalogsearch_advanced_result>
         <reference name="head">
             <action method="setRobots">
-                <value>noindex, nofollow</value>
+                <value>noindex, follow</value>
                 <name>robots</name>
             </action>
         </reference>
@@ -315,6 +315,13 @@
     </catalogsearch_advanced_result>
 
     <catalogsearch_advanced_index>
+        <reference name="head">
+            <action method="setForcedTitle"><title>Die Gastronomiebedarf-Suche</title></action>
+            <action method="setRobots">
+                <value>noindex, follow</value>
+                <name>robots</name>
+            </action>
+        </reference>
         <reference name="root">
             <action method="setTemplate">
                 <template>page/1column.phtml</template>
