--- a/skin/frontend/foundation/default/src/assets/scss/_settings.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/_settings.scss
@@ -765,7 +765,7 @@ $switch-height-tiny: 1rem;
 $switch-height-small: 1.75rem;
 $switch-height-large: 2.5rem;
 $switch-radius: $global-radius;
-$switch-margin: $global-margin;
+$switch-margin: 0;
 $switch-paddle-background: $white;
 $switch-paddle-offset: 0.25rem;
 $switch-paddle-radius: $global-radius;
