change Header-Logo with Slogan

--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -32,10 +32,9 @@
     <div class="header-top">
         <div class="brand">
             <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">
-                <img src="<?php echo $this->getSkinUrl('dist/assets/img/logo.png'); ?>"
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
                      alt="<?php echo $this->getLogoAlt() ?>"/>
             </a>
-            <span class="slogan">Großküchen- &amp; Kühltechnik</span>
         </div>
         <div class="trusted">
             <ul class="menu">
