change tier-price promo-codes text-output

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -437,6 +437,12 @@
     }
   }
   .tier-price {
+    .tier-price-special {
+      .first {
+        color: $alert-color;
+        font-size: 1.2em;
+      }
+    }
     table {
       @include breakpoint(medium down) {
         @include table-stack;
