--- a/app/design/frontend/foundation/default/template/catalog/product/view/tierprices.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/tierprices.phtml
@@ -45,6 +45,12 @@ if (Mage::helper('weee')->typeOfDisplay($_product, array(1, 2, 4))) {
 ?>
 <?php if (count($_tierPrices) > 0): ?>
 <li class="bullet-item tier-price">
+    <?php if (($_product->getData('promo_quote'))): ?>
+        <div class="tier-price-special">
+            <p class="first"><?php echo $this->__('Aktionsrabatt auch auf Staffelpreise') ?></p>
+            <p class="second"><?php echo $this->__('(wird im Warenkorb abgezogen)') ?></p>
+        </div>
+    <?php endif; ?>
     <table>
         <thead>
         <tr>
