--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -9,11 +9,11 @@
     <div class="footer-extras">
         <div class="content">
             <a href="<?php echo Mage::getUrl('', array('_direct' =>'lieferung')); ?>">
-                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/versandkostenfrei.png' ?>"
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/versandkostenfrei.png') ?>"
                      alt="kostenfreie Lieferung ab 99 EUR">
             </a>
             <a href="<?php echo Mage::getUrl('', array('_direct' =>'newsletter')); ?>">
-                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/newsletter.png' ?>"
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/newsletter.png') ?>"
                      alt="kostenfreier Newsletter">
             </a>
         </div>
@@ -185,38 +185,50 @@
             <ul>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#paypal')); ?>">
-                        <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/payments/paypal-white.png' ?>"
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/paypal-white.png') ?>"
                              alt="PayPal Logo"/>
                     </a>
                 </li>
                 <li>
-                    <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#moneyorder')); ?>">
-                        <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/payments/vorkasse-white.png' ?>"
-                             alt="Vorkasse"/>
-                    </a>
-                </li>
-                <li>
-                    <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#sofort')); ?>">
-                        <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/payments/sofort-white.png' ?>"
-                             alt="Sofortüberweisung Logo"/>
-                    </a>
-                </li>
-                <li>
-                    <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#invoice')); ?>">
-                        <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/payments/rechnung-white.png' ?>"
-                             alt="Rechnung"/>
-                    </a>
-                </li>
-                <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#amazon')); ?>">
-                        <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/payments/amazon-payments-white.png' ?>"
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/amazon-payments-white.png') ?>"
                              alt="Amazon payments"/>
                     </a>
                 </li>
                 <li>
+                    <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#sofort')); ?>">
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/sofort-white.png') ?>"
+                             alt="Sofortüberweisung Logo"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#moneyorder')); ?>">
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/vorkasse-white.png') ?>"
+                             alt="Vorkasse"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#creditcard')); ?>">
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/creditcard-white.png') ?>"
+                             alt="Kreditkarte"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#invoice')); ?>">
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/invoice-white.png') ?>"
+                             alt="Rechnung"/>
+                    </a>
+                </li>
+                <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#finanz')); ?>">
-                        <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/payments/finanz-white.png' ?>"
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/finanz-white.png') ?>"
                              alt="Finanzierung"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#sepa')); ?>">
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/sepa-white.png') ?>"
+                             alt="Sepa Lastschrift"/>
                     </a>
                 </li>
             </ul>
