--- a/app/design/frontend/foundation/default/template/checkout/cart/noItems.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/cart/noItems.phtml
@@ -31,6 +31,19 @@
     <?php echo $this->getMessagesBlock()->toHtml() ?>
     <?php echo $this->getChildHtml('checkout_cart_empty_widget'); ?>
     <p><?php echo $this->__('You have no items in your shopping cart.') ?></p>
-    <a class="button secondary" href="<?php echo Mage::helper('core')->quoteEscape($this->getContinueShoppingUrl()) ?>"><?php echo $this->__('Klicken Sie hier, um den Einkauf fortzusetzen.') ?></a>
+    <a class="button secondary"
+       href="<?php echo Mage::helper('core')->quoteEscape($this->getContinueShoppingUrl()) ?>"><?php echo $this->__('Klicken Sie hier, um den Einkauf fortzusetzen.') ?></a>
     <?php echo $this->getChildHtml('shopping.cart.table.after'); ?>
+    <div class="callout secondary">
+        <p class="h2">Versand zu Weihnachten und Neujahr</p>
+        <p>Nachfolgend unsere gesonderten Versand-Zeiten zu Weihnachten und Neujahr:</p>
+        <ul class="margin-bottom-1">
+            <li>Bis 21.12.2018: normaler Versand, normale telefonische Bestellannahme</li>
+            <li>22.12. – 26.12.2018 : kein Versand, keine telefonische Bestellannahme</li>
+            <li>27.12. – 28.12.2018 : kein Versand, normale telefonische Bestellannahme</li>
+            <li>29.12.2018 – 01.01.2019 : kein Versand, keine telefonische Bestellannahme</li>
+            <li>Ab 02.01.2019 : normaler Versand, normale telefonische Bestellannahme</li>
+        </ul>
+        <p>Bitte beachten Sie, dass es jetzt schon zu Lieferverzögerungen kommen kann. Grund hierfür ist das erhöhte Weihnachtsgeschäft. Besonders kurz vor und nach den Feiertagen sind Lieferverzögerungen bei allen Versanddienstleistern möglich.</p>
+    </div>
 </div>
