change color for producttabs

--- a/app/design/frontend/foundation/default/template/catalogsearch/form.mini.phtml
+++ b/app/design/frontend/foundation/default/template/catalogsearch/form.mini.phtml
@@ -8,7 +8,7 @@ $catalogSearchHelper = $this->helper('catalogsearch');
                    type="text"
                    aria-label="search"
                    name="<?php echo $catalogSearchHelper->getQueryParamName() ?>"
-                   value="<?php echo $catalogSearchHelper->getEscapedQueryText() ?>"
+                   value="<?php echo $this->htmlEscape($catalogSearchHelper->getEscapedQueryText()) ?>"
                    maxlength="<?php echo $catalogSearchHelper->getMaxQueryLength(); ?>"
                    placeholder="<?php echo $this->__('Search') ?>"
                    autocomplete="off"
