--- a/skin/frontend/foundation/default/src/assets/scss/_settings.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/_settings.scss
@@ -798,11 +798,11 @@ $table-stack-breakpoint: medium;
 
 $tab-margin: 0;
 $tab-background: $white;
-$tab-color: $primary-color;
+$tab-color: $alert-color;
 $tab-background-active: $light-gray;
-$tab-active-color: $primary-color;
+$tab-active-color: $alert-color;
 $tab-item-font-size: rem-calc(12);
-$tab-item-background-hover: $white;
+$tab-item-background-hover: $light-gray;
 $tab-item-padding: 1.25rem 1.5rem;
 $tab-expand-max: 6;
 $tab-content-background: $white;
