--- a/app/design/frontend/foundation/default/template/catalog/product/view/addto.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/addto.phtml
@@ -51,7 +51,7 @@
 <?php endif; ?>
 <?php if ($_product->getData('custom_quote') == 1): ?>
     <li class="description">
-        <div class="custom-quote"><p>Fragen Sie nach unserem g&uuml;nstigen Hauspreis!</p>
+        <div class="custom-quote"><p>Fragen Sie uns nach Ihrem günstigen Hauspreis!</p>
             <div class="stacked-for-small button-group">
                 <a class="button hollow" href="tel:+498004566000" rel="nofollow noopener noreferrer"><i class="fa fa-phone"></i> <strong>0800 456 6000</strong></a>
                 <a class="button hollow" href="mailto:shop@gastrodax.de" rel="nofollow noopener noreferrer">shop@gastrodax.de</a>
