change footer links

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -32,6 +32,9 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' =>'bestellvorgang')); ?>"><?php echo $this->__('Bestellvorgang') ?></a>
                     </li>
                     <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' =>'leasing-mietkauf')); ?>"><?php echo $this->__('Finanzierung %') ?></a>
+                    </li>
+                    <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' =>'lieferung')); ?>"><?php echo $this->__('Lieferung') ?></a>
                     </li>
                     <li>
