--- a/app/design/frontend/foundation/default/template/checkout/onepage/review/info.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/onepage/review/info.phtml
@@ -27,16 +27,6 @@
 <?php echo $this->getChildHtml('items_before'); ?>
 <div id="checkout-review-table-wrapper">
     <table class="data-table" id="checkout-review-table">
-        <?php if ($this->helper('tax')->displayCartBothPrices()): $colspan = $rowspan = 2; else: $colspan = $rowspan = 1; endif; ?>
-        <col width="1" />
-        <col width="1" />
-        <col width="1" />
-        <col width="1" />
-        <col width="1" />
-        <?php if ($this->helper('tax')->displayCartBothPrices()): ?>
-        <col width="1" />
-        <col width="1" />
-        <?php endif; ?>
         <thead>
             <tr>
                 <th rowspan="<?php echo $rowspan ?>"></th>
@@ -45,21 +35,13 @@
                 <th rowspan="<?php echo $rowspan ?>" class="text-center"><?php echo $this->__('Qty') ?></th>
                 <th colspan="<?php echo $colspan ?>" class="text-center"><?php echo $this->__('Subtotal') ?></th>
             </tr>
-            <?php if ($this->helper('tax')->displayCartBothPrices()): ?>
-                <tr>
-                    <th class="text-right"><?php echo $this->helper('tax')->getIncExcTaxLabel(false) ?></th>
-                    <th><?php echo $this->helper('tax')->getIncExcTaxLabel(true) ?></th>
-                    <th class="text-right"><?php echo $this->helper('tax')->getIncExcTaxLabel(false) ?></th>
-                    <th><?php echo $this->helper('tax')->getIncExcTaxLabel(true) ?></th>
-                </tr>
-            <?php endif; ?>
         </thead>
-        <?php echo $this->getChildHtml('totals'); ?>
         <tbody>
         <?php foreach($this->getItems() as $_item): ?>
             <?php echo $this->getItemHtml($_item)?>
         <?php endforeach ?>
         </tbody>
+        <?php echo $this->getChildHtml('totals'); ?>
     </table>
 </div>
 <?php echo $this->getChildHtml('items_after'); ?>
@@ -71,13 +53,16 @@
 </script>
 <div id="checkout-review-submit">
     <?php echo $this->getChildHtml('agreements') ?>
-    <div class="buttons-set" id="review-buttons-container">
-        <p class="f-left"><?php echo $this->__('Forgot an Item?') ?> <a href="<?php echo $this->getUrl('checkout/cart') ?>"><?php echo $this->__('Edit Your Cart') ?></a></p>
+    <div class="stacked-for-small button-group" id="review-buttons-container">
+        <a class="button hollow" href="<?php echo $this->getUrl('checkout/cart') ?>">
+            <?php echo $this->__('Forgot an Item?') ?> <?php echo $this->__('Edit Your Cart') ?>
+        </a>
         <?php echo $this->getChildHtml('button') ?>
-        <div class="please-wait" id="review-please-wait" style="display:none;">
-            <div class="centered">
-                <i class="fas fa-circle-notch fa-spin fa-3x fa-fw"></i>
-            </div>
+    </div>
+    <p class="callout"><?php echo $this->__('Bitte kontrollieren Sie Ihre Eingaben noch einmal sorgfältig. Korrigieren Sie ggf. Ihre Angaben über "Ändern" (rechte Spalte).') ?></p>
+    <div class="please-wait" id="review-please-wait" style="display:none;">
+        <div class="centered">
+            <i class="fas fa-circle-notch fa-spin fa-3x fa-fw"></i>
         </div>
     </div>
     <script type="text/javascript">
