--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -256,15 +256,9 @@
         </div>
         <div class="social">
             <ul>
-                <li><a href="https://facebook.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer"><i
-                                class="fab fa-facebook-square"></i></a></li>
-                <li><a href="https://plus.google.com/+gastrodax" target="_blank" rel="nofollow noopener noreferrer"><i
-                                class="fab fa-google-plus-square"></i></a></li>
-                <li><a href="https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g" target="_blank"
-                       rel="nofollow noopener noreferrer"><i
-                                class="fab fa-youtube-square"></i></a></li>
-                <li><a href="https://twitter.com/gastrodax" target="_blank" rel="nofollow noopener noreferrer"><i
-                                class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://facebook.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g" target="_blank" rel="nofollow noopener noreferrer"><i class="fab fa-youtube-square"></i></a></li>
+                <li><a href="https://twitter.com/gastrodax" target="_blank" rel="nofollow noopener noreferrer"><i class="fab fa-twitter-square"></i></a></li>
             </ul>
         </div>
         <div class="copyright">
