change footer links

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -112,6 +112,9 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'service')); ?>"><?php echo $this->__('Gastro-Service') ?></a>
                     </li>
                     <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'leasing-mietkauf')); ?>"><?php echo $this->__('Leasing/Mietkauf') ?></a>
+                    </li>
+                    <li>
                         <a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/fax/faxbestellung.pdf'; ?>"
                            target="_blank" rel="nofollow noopener noreferrer">Faxbestellung</a></li>
                     <?php echo $this->getChildHtml('store_switcher', false) ?>
