change footer_info grid-x and links

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -148,6 +148,9 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/seltmann-weiden')); ?>"><?php echo $this->__('Seltmann Weiden') ?></a>
                     </li>
                     <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/unox')); ?>"><?php echo $this->__('Unox') ?></a>
+                    </li>
+                    <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller')); ?>"><?php echo $this->__('weitere Gastro-Marken') ?></a>
                     </li>
                 </ul>
@@ -162,7 +165,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/winterhalter/geschirrspuelmaschinen')); ?>"><?php echo $this->__('Winterhalter Geschirrsp&uuml;lmaschinen') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/jura/kaffeevollautomaten')); ?>"><?php echo $this->__('Jura Kaffeevollautomaten') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/jura/kaffeevollautomaten')); ?>"><?php echo $this->__('JURA Kaffeevollautomaten') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/seltmann-weiden/serie-salzburg')); ?>"><?php echo $this->__('Seltmann Weiden Salzburg') ?></a>
@@ -181,6 +184,9 @@
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/nordcap/kuehlschraenke')); ?>"><?php echo $this->__('NordCap K&uuml;hlschr&auml;nke') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/aliseo/kosmetikspiegel')); ?>"><?php echo $this->__('Aliseo Kosmetikspiegel') ?></a>
                     </li>
                 </ul>
             </div>
