change grid for special cat jura

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -43,7 +43,7 @@
 }
 
 //Category & Manufacturers
-.categories-grid, .categories-home-grid, .manufacturers-grid {
+.categories-grid, .categories-home-grid, .categories-jura-grid, .manufacturers-grid {
   padding: 0 0 1em 0;
   li {
     padding: .5em;
