--- a/app/design/frontend/foundation/default/template/catalog/product/compare/sidebar.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/compare/sidebar.phtml
@@ -62,7 +62,7 @@ $_items = $_helper->getItemCount() > 0 ? $_helper->getItemCollection() : null;
                     </a>
                 </div>
                 <div class="reveal large" id="compare" data-reveal></div>
-                <script>
+                <script type="text/javascript">
                     jQuery('.compare-modal').click(function () {
                         jQuery.ajax({
                             url: '<?php echo $_helper->getListUrl() ?>',
