small styles changes for categorie_grids and owl sliders

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -48,6 +48,7 @@
   li {
     padding: .5em;
     border: 1px solid $medium-gray;
+    border-radius: $global-radius;
     cursor: pointer;
     text-align: center;
     img {
