--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -94,6 +94,7 @@
   .item, .column {
     padding: .5rem;
     border: 1px solid $medium-gray;
+    border-radius: $global-radius;
     cursor: pointer;
     text-align: center;
     display: flex;
