--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -45,13 +45,13 @@ $_categories = $this->getCurrentChildCategories(); ?>
     <li class="item" data-equalizer-watch>
         <div class="category-image">
             <a href="<?php echo Mage::getUrl('') . 'hersteller/aliseo'; ?>"
-               title="Aliseo Profishop">
+               title="Aliseo Shop">
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/aliseo-profishop.png'); ?>"
-                     alt="Aliseo Profishop"/>
+                     alt="Aliseo Shop"/>
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/aliseo'; ?>"
-                   title="Aliseo Profishop">Aliseo Profishop</a>
+                   title="Aliseo Shop">Aliseo Shop</a>
             </h2>
         </div>
     </li>
