add footer link job and graphic

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -16,6 +16,10 @@
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/newsletter.png') ?>"
                      alt="kostenfreier Newsletter">
             </a>
+            <a href="<?php echo Mage::getUrl('', array('_direct' =>'jobs')); ?>">
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/jobs.png') ?>"
+                     alt="Jobs &amp; Careers">
+            </a>
         </div>
     </div>
     <div class="footer-info">
