delete newsletter links

--- a/app/design/frontend/foundation/default/template/persistent/customer/form/register.phtml
+++ b/app/design/frontend/foundation/default/template/persistent/customer/form/register.phtml
@@ -219,12 +219,12 @@
                         errors: "#passwordStrengthHeadLine"
                     },
                     errorMessages: {
-                        wordLength: "Ihr Passwort ist zu kurz",
-                        wordNotEmail: "Keine Email",
-                        wordSimilarToUsername: "Kein Benutzername",
-                        wordTwoCharacterClasses: "Keine gleichen Wortgruppen",
-                        wordRepetitions: "Zu viele Wiederholungen",
-                        wordSequences: "Ihr Passwort enthält Sequenzen"
+                        wordLength: "Unsicher! Ihr Passwort ist zu kurz",
+                        wordNotEmail: "Unsicher! Keine Email",
+                        wordSimilarToUsername: "Unsicher! Kein Benutzername",
+                        wordTwoCharacterClasses: "Unsicher! Keine gleichen Wortgruppen",
+                        wordRepetitions: "Unsicher! Zu viele Wiederholungen",
+                        wordSequences: "Unsicher! Ihr Passwort enthält Sequenzen"
                     },
                     verdicts: ["zu kurz", "schwach", "gut", "stark", "sehr stark"],
                     showVerdictsInsideProgressBar: true,
