--- a/app/design/frontend/foundation/default/template/customer/form/resetforgottenpassword.phtml
+++ b/app/design/frontend/foundation/default/template/customer/form/resetforgottenpassword.phtml
@@ -1,8 +1,10 @@
 <div class="page-title">
     <h1><?php echo $this->__('Reset a Password'); ?></h1>
 </div>
-<?php echo $this->getMessagesBlock()->toHtml(); ?>
+<?php echo $this->getChildHtml('form_fields_before') ?>
+<?php echo $this->getMessagesBlock()->toHtml() ?>
 <form action="<?php echo $this->getUrl('*/*/resetpasswordpost'); ?>" method="post" id="form-validate" data-abide novalidate>
+    <?php echo $this->getBlockHtml('formkey'); ?>
     <div class="password-field">
         <label for="password"><?php echo $this->__('New Password'); ?>
             <small><?php echo $this->__('required') ?></small>
