change cart-headlines to p class headline

--- a/app/design/frontend/foundation/default/template/checkout/cart/coupon.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/cart/coupon.phtml
@@ -26,7 +26,7 @@
 ?>
 <form id="discount-coupon-form" action="<?php echo $this->getFormActionUrl() ?>" method="post" data-abide novalidate>
     <div class="discount">
-        <h2><?php echo $this->__('Discount Codes') ?></h2>
+        <p class="h4"><?php echo $this->__('Discount Codes') ?></p>
         <div class="discount-form">
             <div class="coupon-field">
                 <label for="coupon_code"><?php echo $this->__('Enter your coupon code if you have one.') ?>
