--- a/app/design/frontend/foundation/default/template/checkout/cart/crosssell.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/cart/crosssell.phtml
@@ -66,7 +66,7 @@ function clean($string)
 <?php if ($this->getItemCount()): ?>
     <div class="crosssell">
         <div class="block-title">
-            <h2><?php echo $this->__('Based on your selection, you may be interested in the following items:') ?></h2>
+            <p class="h3"><?php echo $this->__('Based on your selection, you may be interested in the following items:') ?></p>
         </div>
         <ul class="products-grid">
             <?php foreach ($this->getItems() as $_item): ?>
